--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     executor: ci-executor
     steps:
       - checkout
+      # https://circleci.com/blog/publishing-npm-packages-using-circleci-2-0/
       - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
       - restore_cache:
           key: v1-deps-{{ checksum "package.json" }}
@@ -26,13 +27,14 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/project
+      # https://support.circleci.com/hc/en-us/articles/360018860473-How-to-push-a-commit-back-to-the-same-repository-as-part-of-the-CircleCI-job
       - add_ssh_keys:
           fingerprints:
             - "76:57:0d:eb:5f:e0:e4:a4:3d:39:e0:6a:7b:4f:8c:76"
       - run: .circleci/publish patch
 workflows:
   version: 2
-  publish-patch:
+  build-and-publish:
     jobs:
       - build:
           filters:
@@ -42,6 +44,7 @@ workflows:
           requires:
             - build
           filters:
+            # https://circleci.com/docs/2.0/workflows/#executing-workflows-for-a-git-tag
             tags:
               only: /^publish-patch$/
             branches:
