Trying out publishing via command line instead of tag
The Circle CI API allows triggering a job via API [1] and allows
triggering a workflow via API [2]. When triggering a job, you can pass
additional environment variables to be used in the job. But when
triggering a workflow, you can't pass any additional environment
variables.

When Circle CI is building, it will need to be able to distinguish a
normal CI run (test, build, lint, etc) from a publish CI run. If there's
no "trigger tag" or other artifact in the git repo, I don't think
there's any other way to distinguish these two types of builds other
than an environment variable.

So if we go with CLI publishing, we'll need to go back to using a single
job instead of a workflow of possibly many jobs. Or wait until we can
pass environment variables into an API-triggered workflow.

Also, API-triggered jobs cannot use v2.1 features like executors,
commands, parameters, etc.

1: https://circleci.com/docs/api/#trigger-a-new-job
2: https://circleci.com/docs/api/#trigger-a-new-build-by-project-preview

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,8 @@
-version: 2.1
-executors:
-  ci-executor:
-    docker:
-      - image: circleci/node:10.16
+version: 2
 jobs:
   build:
-    executor: ci-executor
+    docker:
+      - image: circleci/node:10.16
     steps:
       - checkout
       # https://circleci.com/blog/publishing-npm-packages-using-circleci-2-0/
@@ -18,67 +15,16 @@ jobs:
           paths:
             - ./node_modules
       - run: yarn build
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-            - "*"
-  publish:
-    executor: ci-executor
-    parameters:
-      version:
-        description: Which version number to increment before publishing
-        type: enum
-        enum: ["prerelease", "minor", "major", "patch"]
-    steps:
-      - attach_workspace:
-          at: ~/project
-      # https://support.circleci.com/hc/en-us/articles/360018860473-How-to-push-a-commit-back-to-the-same-repository-as-part-of-the-CircleCI-job
+      - run:
+          name: Halt if we don't need to publish
+          command: |
+              [ -n "$CI_INCREMENT_VERSION" ] || circleci-agent step halt
       - add_ssh_keys:
           fingerprints:
             - "76:57:0d:eb:5f:e0:e4:a4:3d:39:e0:6a:7b:4f:8c:76"
-      - run: .circleci/publish << parameters.version >>
+      - run: .circleci/publish
 workflows:
   version: 2
   build-and-publish:
     jobs:
-      - build:
-          filters:
-            tags:
-              only: /.*/
-      # https://circleci.com/docs/2.0/workflows/#executing-workflows-for-a-git-tag
-      - publish:
-          version: prerelease
-          requires:
-            - build
-          filters:
-            tags:
-              only: /^publish-prerelease$/
-            branches:
-              ignore: /.*/
-      - publish:
-          version: patch
-          requires:
-            - build
-          filters:
-            tags:
-              only: /^publish-patch$/
-            branches:
-              ignore: /.*/
-      - publish:
-          version: minor
-          requires:
-            - build
-          filters:
-            tags:
-              only: /^publish-minor$/
-            branches:
-              ignore: /.*/
-      - publish:
-          version: major
-          requires:
-            - build
-          filters:
-            tags:
-              only: /^publish-major$/
-            branches:
-              ignore: /.*/
+      - build
