--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,6 @@ workflows:
             - build
           filters:
             tags:
-              only: /v[0-9]+\.[0-9]+\.[0-9]+.*/
+              only: /v[0-9]+\.[0-9]+\.[0-9]+(-[0-9]+)?/
             branches:
               ignore: /.*/
